# bitbox

./: .gitignore  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  startup.sh
bitbox_project/: asgi.py  settings.py  urls.py  wsgi.py
movie_app/: admin.py  models.py  urls.py  views.py
movie_app/management/commands/: create_admin.py  createadmin.py
movie_app/migrations/: 0001_initial.py  0002_alter_episode_options_and_more.py  0003_alter_episode_options.py
movie_app/templates/: episode_detail.html  home.html  movie_detail.html  movie_list.html  season_detail.html  series_detail.html  series_list.htm
static/css/: style.css
