[tool.poetry]
name = "bitbox"
version = "0.1.0"
description = "Movie download site"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.2.5"
Pillow = "^10.0.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"